mgmnt-cluster/ansible/roles/k3s/templates/networkpolicies.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-cluster-traffic"
spec:
  nodeSelector: {}
  ingress:
    - fromEntities:
        - cluster
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-external-ssh"
spec:
  nodeSelector: {}
  ingress:
    - fromCIDR:
        # - "11.11.11.11/32"    # control
        - "0.0.0.0/0"
      toPorts:
        - ports:
            - port: "22"
              protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-external-kube-api"
spec:
  nodeSelector: {}
  ingress:
    - fromCIDR:
        # - "11.11.11.11/32"    # control
        - "0.0.0.0/0"
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
# ---
# apiVersion: "cilium.io/v2"
# kind: CiliumClusterwideNetworkPolicy
# metadata:
#   name: "allow-internal-http"
# spec:
#   nodeSelector: {}
#   ingress:
#     - fromCIDR:
#         - "192.168.0.0/16"  # internal
#         - "10.0.0.0/8"      # internal
#       toPorts:
#         - ports:
#             - port: "80"
#               protocol: TCP
